RESOLVED FIXED227525
REGRESSION(r278884): [Nicosia] Fix empty stack check in CairoOperationRecorder::restore()
https://bugs.webkit.org/show_bug.cgi?id=227525
Summary REGRESSION(r278884): [Nicosia] Fix empty stack check in CairoOperationRecorde...
Carlos Garcia Campos
Reported 2021-06-30 06:20:49 PDT
We keep our own state stack, with a state added at construction, so we should check our stack instead.
Attachments
Patch (1.63 KB, patch)
2021-06-30 06:22 PDT, Carlos Garcia Campos
no flags
Carlos Garcia Campos
Comment 1 2021-06-30 06:22:11 PDT
EWS
Comment 2 2021-06-30 09:28:51 PDT
Committed r279413 (239278@main): <https://commits.webkit.org/239278@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 432589 [details].
Radar WebKit Bug Importer
Comment 3 2021-06-30 09:29:18 PDT
Note You need to log in before you can comment on or make changes to this bug.