REGRESSION(r278884): [Nicosia] Fix empty stack check in CairoOperationRecorder::restore() https://bugs.webkit.org/show_bug.cgi?id=227525

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2021-06-30
Reviewed by Myles C. Maxfield.

We keep our own state stack, with a state added at construction, so we should check our stack instead.

* platform/graphics/nicosia/cairo/NicosiaCairoOperationRecorder.cpp:
(Nicosia::CairoOperationRecorder::restore):

Canonical link: https://commits.webkit.org/239278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279413 268f45cc-cd09-0410-ab3c-d52691b4dbfc